--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Yingxia Shao"
   avatar           : "profile.png"
-  bio              : "Associate Professor at SCS, BUPT" #Beijing University of Posts and Telecommunications
+  bio              : "Professor at SCS, BUPT" #Beijing University of Posts and Telecommunications
   location         : "Beijing, China"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=h6gVF8YAAAAJ"
